[gd_scene load_steps=16 format=3 uid="uid://bethe3wyoxgu3"]

[ext_resource type="Script" uid="uid://bgl3mrni6bl7q" path="res://Scenes/email_screen_level_2.gd" id="1_xeac5"]
[ext_resource type="Texture2D" uid="uid://bs86oj71qxjtc" path="res://Assets/tojam25_emailLayout.png" id="2_04buk"]
[ext_resource type="FontFile" uid="uid://6hqn3o6o7h5n" path="res://Fonts/pixelfontmediumbold.ttf" id="3_0b84o"]
[ext_resource type="Texture2D" uid="uid://cftccgdyvwby" path="res://Assets/tojam25_emailBlock2_Over.png" id="4_04buk"]
[ext_resource type="FontFile" uid="uid://cby3c4hxa2ie0" path="res://Fonts/pixelfontmedium.ttf" id="4_7mags"]
[ext_resource type="Texture2D" uid="uid://b1c1if6loi5p0" path="res://Assets/Pic_Claire1.png" id="5_04buk"]
[ext_resource type="Texture2D" uid="uid://cxslwohbvnbaf" path="res://Assets/tojam25_emailBlock2_Off.png" id="5_bmgvn"]
[ext_resource type="Texture2D" uid="uid://bp7u0ucb80686" path="res://Assets/tojam25_emailBlock1_Over.png" id="5_mtgou"]
[ext_resource type="Texture2D" uid="uid://inkkumrsb03e" path="res://Assets/tojam25_emailLayoutRef.png" id="7_2i1bi"]
[ext_resource type="Texture2D" uid="uid://dsbrkf7o0d6d1" path="res://Assets/Pic_Claire2.png" id="8_2i1bi"]
[ext_resource type="Texture2D" uid="uid://dhnd0jonsdu0x" path="res://Assets/tojam25_xButton_Off.png" id="8_bmgvn"]
[ext_resource type="PackedScene" uid="uid://1dopslnjq3w3" path="res://Scenes/emails.tscn" id="8_mtgou"]
[ext_resource type="Texture2D" uid="uid://btuucpnv1m6uk" path="res://Assets/tojam25_xButton_On.png" id="9_wvwnk"]
[ext_resource type="Texture2D" uid="uid://dxu2fpmf8rdhn" path="res://Assets/tojam25_xButton_Over.png" id="10_2i1bi"]
[ext_resource type="Texture2D" uid="uid://nj0oj3lrjyl" path="res://Assets/tojam25_photoFace2.png" id="14_mtgou"]

[node name="EmailScreenLevel2" type="Node2D"]
visibility_layer = 4
script = ExtResource("1_xeac5")

[node name="EmailLayout" type="Sprite2D" parent="."]
visibility_layer = 16
texture = ExtResource("2_04buk")
centered = false

[node name="TextureButtonExit" type="TextureButton" parent="EmailLayout"]
offset_left = 1718.0
offset_top = 129.0
offset_right = 1791.0
offset_bottom = 202.0
texture_normal = ExtResource("8_bmgvn")
texture_pressed = ExtResource("9_wvwnk")
texture_hover = ExtResource("10_2i1bi")
ignore_texture_size = true
stretch_mode = 0

[node name="ScrollContainer" type="ScrollContainer" parent="EmailLayout"]
offset_left = 128.0
offset_top = 211.0
offset_right = 650.0
offset_bottom = 951.0

[node name="VBoxContainer" type="VBoxContainer" parent="EmailLayout/ScrollContainer"]
layout_mode = 2

[node name="TextureButtonContact1" type="TextureButton" parent="EmailLayout/ScrollContainer/VBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("5_bmgvn")
texture_hover = ExtResource("4_04buk")
texture_disabled = ExtResource("5_mtgou")

[node name="TextureRectContact" type="TextureRect" parent="EmailLayout/ScrollContainer/VBoxContainer/TextureButtonContact1"]
layout_mode = 0
offset_left = 15.0
offset_top = 15.0
offset_right = 145.0
offset_bottom = 146.0
texture = ExtResource("5_04buk")

[node name="LabelContact" type="Label" parent="EmailLayout/ScrollContainer/VBoxContainer/TextureButtonContact1"]
z_index = 1
layout_mode = 0
offset_left = 165.0
offset_top = 18.0
offset_right = 437.0
offset_bottom = 74.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_0b84o")
theme_override_font_sizes/font_size = 32
text = "doooo"
vertical_alignment = 1

[node name="LabelSubject" type="Label" parent="EmailLayout/ScrollContainer/VBoxContainer/TextureButtonContact1"]
z_index = 1
layout_mode = 0
offset_left = 165.0
offset_top = 74.0
offset_right = 437.0
offset_bottom = 130.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4_7mags")
theme_override_font_sizes/font_size = 32
text = "doooo"
vertical_alignment = 1
clip_text = true
text_overrun_behavior = 3

[node name="TextureButtonContact2" type="TextureButton" parent="EmailLayout/ScrollContainer/VBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("5_bmgvn")
texture_hover = ExtResource("4_04buk")
texture_disabled = ExtResource("5_mtgou")

[node name="LabelContact" type="Label" parent="EmailLayout/ScrollContainer/VBoxContainer/TextureButtonContact2"]
z_index = 1
layout_mode = 0
offset_left = 165.0
offset_top = 18.0
offset_right = 437.0
offset_bottom = 74.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_0b84o")
theme_override_font_sizes/font_size = 32
text = "doooo"
vertical_alignment = 1

[node name="LabelSubject" type="Label" parent="EmailLayout/ScrollContainer/VBoxContainer/TextureButtonContact2"]
z_index = 1
layout_mode = 0
offset_left = 165.0
offset_top = 74.0
offset_right = 437.0
offset_bottom = 130.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4_7mags")
theme_override_font_sizes/font_size = 32
text = "doooo"
vertical_alignment = 1
clip_text = true
text_overrun_behavior = 3

[node name="TextureRectContact" type="TextureRect" parent="EmailLayout/ScrollContainer/VBoxContainer/TextureButtonContact2"]
layout_mode = 0
offset_left = 15.0
offset_top = 15.0
offset_right = 145.0
offset_bottom = 146.0
texture = ExtResource("8_2i1bi")

[node name="TextureButtonContact3" type="TextureButton" parent="EmailLayout/ScrollContainer/VBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("5_bmgvn")
texture_hover = ExtResource("4_04buk")
texture_disabled = ExtResource("5_mtgou")

[node name="LabelContact" type="Label" parent="EmailLayout/ScrollContainer/VBoxContainer/TextureButtonContact3"]
z_index = 1
layout_mode = 0
offset_left = 165.0
offset_top = 18.0
offset_right = 437.0
offset_bottom = 74.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_0b84o")
theme_override_font_sizes/font_size = 32
text = "doooo"
vertical_alignment = 1

[node name="LabelSubject" type="Label" parent="EmailLayout/ScrollContainer/VBoxContainer/TextureButtonContact3"]
z_index = 1
layout_mode = 0
offset_left = 165.0
offset_top = 74.0
offset_right = 437.0
offset_bottom = 130.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4_7mags")
theme_override_font_sizes/font_size = 32
text = "doooo"
vertical_alignment = 1
clip_text = true
text_overrun_behavior = 3

[node name="TextureRectContact" type="TextureRect" parent="EmailLayout/ScrollContainer/VBoxContainer/TextureButtonContact3"]
layout_mode = 0
offset_left = 15.0
offset_top = 15.0
offset_right = 145.0
offset_bottom = 146.0
texture = ExtResource("5_04buk")

[node name="TextureButtonContact4" type="TextureButton" parent="EmailLayout/ScrollContainer/VBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("5_bmgvn")
texture_hover = ExtResource("4_04buk")
texture_disabled = ExtResource("5_mtgou")

[node name="LabelContact" type="Label" parent="EmailLayout/ScrollContainer/VBoxContainer/TextureButtonContact4"]
z_index = 1
layout_mode = 0
offset_left = 165.0
offset_top = 18.0
offset_right = 437.0
offset_bottom = 74.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_0b84o")
theme_override_font_sizes/font_size = 32
text = "doooo"
vertical_alignment = 1

[node name="LabelSubject" type="Label" parent="EmailLayout/ScrollContainer/VBoxContainer/TextureButtonContact4"]
z_index = 1
layout_mode = 0
offset_left = 165.0
offset_top = 74.0
offset_right = 437.0
offset_bottom = 130.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4_7mags")
theme_override_font_sizes/font_size = 32
text = "doooo"
vertical_alignment = 1
clip_text = true
text_overrun_behavior = 3

[node name="TextureRectContact" type="TextureRect" parent="EmailLayout/ScrollContainer/VBoxContainer/TextureButtonContact4"]
layout_mode = 0
offset_left = 15.0
offset_top = 15.0
offset_right = 145.0
offset_bottom = 146.0
texture = ExtResource("5_04buk")

[node name="LabelFrom" type="Label" parent="EmailLayout"]
offset_left = 813.0
offset_top = 227.0
offset_right = 1753.0
offset_bottom = 290.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4_7mags")
theme_override_font_sizes/font_size = 32
text = "Place"
vertical_alignment = 1

[node name="LabelTo" type="Label" parent="EmailLayout"]
offset_left = 781.0
offset_top = 308.0
offset_right = 1721.0
offset_bottom = 371.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4_7mags")
theme_override_font_sizes/font_size = 32
text = "Place"
vertical_alignment = 1

[node name="LabelSubject" type="Label" parent="EmailLayout"]
offset_left = 691.0
offset_top = 390.0
offset_right = 1631.0
offset_bottom = 453.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4_7mags")
theme_override_font_sizes/font_size = 32
text = "Place"
vertical_alignment = 1

[node name="LabelBody3" type="RichTextLabel" parent="EmailLayout"]
visible = false
offset_left = 687.0
offset_top = 477.0
offset_right = 1775.0
offset_bottom = 940.0
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = ExtResource("4_7mags")
theme_override_fonts/bold_font = ExtResource("3_0b84o")
theme_override_font_sizes/normal_font_size = 32
theme_override_font_sizes/bold_font_size = 32
text = "Test"
vertical_alignment = 1
justification_flags = 35

[node name="LabelBody" type="Label" parent="EmailLayout"]
offset_left = 685.0
offset_top = 475.0
offset_right = 1768.0
offset_bottom = 930.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_constants/line_spacing = 20
theme_override_fonts/font = ExtResource("4_7mags")
theme_override_font_sizes/font_size = 32
text = "Place"
vertical_alignment = 1
autowrap_mode = 2

[node name="Tojam25EmailLayoutRef" type="Sprite2D" parent="."]
visible = false
texture = ExtResource("7_2i1bi")
centered = false

[node name="Emails" parent="." instance=ExtResource("8_mtgou")]
process_priority = 1

[node name="Tojam25PhotoFace2" type="Sprite2D" parent="."]
position = Vector2(206, 459)
rotation = 0.498219
scale = Vector2(0.185542, 0.185542)
texture = ExtResource("14_mtgou")

[connection signal="pressed" from="EmailLayout/TextureButtonExit" to="." method="_on_texture_button_exit_pressed"]
